platform-engineering/projects/k8s-manifests/express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-api-service
spec:
  type: NodePort
  selector:
    app: express-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30300
