platform-engineering/projects/k8s-manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80        # Service内部ポート
    targetPort: 80  # Podのポート
    nodePort: 30080 # 外部アクセス用ポート（30000-32767）
