platform-engineering/projects/k8s-manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-express-api-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: dev-express-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx
